# alive-engineering-standard

./: .cspell-words.txt  .cspell.json  .gitignore  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  generator.json  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
.sisyphus/plans/: _current_summary.md  _phase1-generate-standards.md  content-injection-phase2.md  massive-content-expansion.md  phase1-implementation-guide.md
blueprint/Architecture/: contract.md
blueprint/Database Design/: _template.md
blueprint/ER/: _er.generated.md
blueprint/Milestones/: _template.md
blueprint/Roadmap/: mvp-plan.md
blueprint/Sequence/: _template.md
blueprint/Tasks/: _template.md
contexts/: README.md
docs/: knowledge-graph.md
docs/00_Project/: 000_ProjectArchitecture.md  001_ProjectStructure.md  001_Project_Overview.md  002_ProjectNaming.md  002_Project_Principles.md  003_ProjectWorkflow.md  003_Project_Naming.md  004_ProjectQuality.md  004_Project_Directory.md  005_ProjectCommunication.md  005_Project_Architecture.md  006_ProjectRelease.md  006_Project_Workflow.md  007_ProjectGlossary.md  007_Project_Quality.md  (+14 more)
generator/: README.md  __init__.py  __main__.py  cli.py  config.py  engine.py  generate_rule.py  models.py  pyproject.toml  requirements.txt  settings.py  template_filters.py  utils.py
generator/config/: domain.yaml  entities.yaml
generator/config/domains/: alive-mood.yaml
generator/generators/: __init__.py  blueprint.py  checklist.py  code.py  context.py  graph.py  prompt.py  rule.py
generator/templates/: checklist.md.j2  context.md.j2  graph.md.j2  layout.md.j2  prompt.md.j2  rule.md.j2
generator/templates/blueprint/: architecture.md.j2  er.md.j2  prd.md.j2
generator/templates/code/flutter/: model.dart.j2  service.dart.j2
generator/templates/code/spring/: controller.java.j2  entity.java.j2  repository.java.j2  service.java.j2
knowledge/: README.md
playbooks/: README.md
prompts/: README.md
scripts/: add_missing_domains.py  check_dupes.py  check_gaps.py  cleanup_duplicates.py  enrich_content.py  generate_knowledge.py  generate_prompts.py  generate_templates.py  knowledge_content.py  remove_llm_dup.py  verify_project.py
standards/: ai.yaml  analytics.yaml  api.yaml  business.yaml  capability.yaml  checklist.yaml  compliance.yaml  context.yaml  database.yaml  deploy.yaml  domain.yaml  event.yaml  flutter.yaml  go.yaml  kotlin.yaml  operation.yaml  performance.yaml  product.yaml  project.yaml  prompt.yaml  react.yaml  rust.yaml  security.yaml  springboot.yaml  swift.yaml  template.yaml  test.yaml  ui.yaml  vue3.yaml  workflow.yaml
templates/: README.md  rule.md.j2
(+1784 files in other folders)
