[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "alive-generator"
version = "1.0.0"
description = "Alive Engineering Standard — Documentation Generator"
requires-python = ">=3.11"
dependencies = [
    "click>=8",
    "jinja2>=3",
    "pyyaml>=6",
    "pydantic>=2",
]

[project.scripts]
alive-generator = "generator.cli:main"

[tool.setuptools.packages.find]
include = ["generator*"]

[tool.setuptools.package-data]
generator = ["templates/**/*", "config/**/*"]
